--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,10 +5,11 @@ body {
 }
 
 .classLi {
-  display: flex;
+  display: inline-table;
 }
+
 
 li {
   margin-right: 10px;
-  width: 35%
+  width: 75%;
 }
